--- a/style.css
+++ b/style.css
@@ -116,3 +116,11 @@
         box-shadow: none;
     }
 }
+
+.ortala {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
