--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 .card {
     width: 100%;
-    height: 100x;
     margin: 5px;
     border-radius: 8px;
     display: flex;
@@ -117,6 +116,12 @@
     }
 }
 
+#game-board {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .ortala {
     display: flex;
     flex-wrap: wrap;
@@ -124,3 +129,50 @@
     align-items: center;
     height: 100vh;
 }
+
+@keyframes shake {
+    0% {
+        transform: rotateY(180deg) translate(0);
+    }
+
+    25% {
+        transform: rotateY(185deg) translate(-8px);
+    }
+
+    50% {
+        transform: rotateY(175deg) translate(8px);
+    }
+
+    75% {
+        transform: rotateY(185deg) translate(-8px);
+    }
+
+    100% {
+        transform: rotateY(180deg) translate(0);
+    }
+}
+
+.wrong-card {
+    animation: shake 0.4s ease-in-out;
+    animation-iteration-count: 1;
+}
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#ortala {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+ 
